tests/NormalTests/paczka1/small_fuzzy/17181212.err
Error in line 1: DEWs S146 99,5
Error in line 2: S146 A974 1,9
